# lab13-sprint-taskscheduler

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.pyenv/: pyvenv.cfg
src/taskscheduler_Jthaddi/: main.py
src/taskscheduler_Jthaddi/scheduler/: calendar_api.py
src/taskscheduler_Jthaddi/tests/: test_main.py
src/taskscheduler_jthaddi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/taskscheduler_mhussei9/: credentials.json  main.py  requirements.txt
src/taskscheduler_mhussei9.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/taskscheduler_mhussei9/tests/: test_calendar_api.py  test_main.py
tests/: test_calendar_api.py  test_main.py
